--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -19,8 +19,8 @@
   </div>
 
   <div class="all-products">
-    {{#each product}}
-    <a href="/product/{{this.slug}}">
+    {{#each products}}
+    <a href="/all-products/product/{{this.slug}}">
       <div class="product">
         <img src="{{this.img.path}}" alt="{{this.name}}" id="product-1" loading="lazy">
         <del><p id="product-old-price">{{this.oldPrice}}</p></del>
@@ -169,70 +169,60 @@
                 <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079975/web-img/mhseyytpn8h6zvg4tabd_r57wfv.webp" alt="loading" loading="lazy">
               </a>
             </li>
-
             <li>
               <a href="/all-products/skincare/mat-na">
                 Mặt nạ
                 <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079978/web-img/sfudjh00pykqpvav4sgy_xqbzev.webp" alt="loading" loading="lazy">
               </a>
             </li>
-
             <li>
               <a href="/all-products/skincare/serum">
                 Serum
                 <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079970/web-img/kjz3zdlyxo76h1p3t6lm_uk4agl.webp" alt="loading" loading="lazy">
-            </a>
+              </a>
             </li>
-
             <li>
               <a href="/all-products/skincare/bha">
                 BHA
                 <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730814300/web-img/dfw5hkqs9gww8tzb6q94_amc5t1.webp" alt="loading" loading="lazy">
-            </a>
+              </a>
             </li>
-
             <li>
               <a href="/all-products/skincare/tay-da-chet">
                 Tẩy da chết
                 <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079964/web-img/ettmlmf7s4x0g8d98nvq_vklnps.webp" alt="loading" loading="lazy">
               </a>
             </li>
-
             <li>
               <a href="/all-products/skincare/duong-da">
                 Dưỡng da
                 <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079987/web-img/xkkpidyegeiesbea9rk5_b4tgej.webp" alt="loading" loading="lazy">
               </a>
             </li>
-
             <li>
               <a href="/all-products/skincare/toner">
                 Toner
                 <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079967/web-img/k0easo5upkoydszse1i3_jp7mrg.webp" alt="loading" loading="lazy">
               </a>
             </li>
-
             <li>
               <a href="/all-products/skincare/nuoc-tay-trang">
                 Nước tẩy trang
                 <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079972/web-img/md2husxtaoo5kmyp6qxy_cmvvnp.webp" alt="loading" loading="lazy">
               </a>
             </li>
-
             <li>
               <a href="/all-products/skincare/cham-mun">
                 Chấm mụn
                 <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079961/web-img/almfjrziupsfnxh4ikej_hfcib1.webp" alt="loading" loading="lazy">
               </a>
             </li>
-            
             <li>
               <a href="/all-products/skincare/kem-duong-am">
                 Kem dưỡng ẩm
                 <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079981/web-img/sznuvy878jkx6irn87wt_molje8.webp" alt="loading" loading="lazy">
               </a>
             </li>
-
             <li>
               <a href="/all-products/skincare/sua-rua-mat">
                 Sữa rửa mặt
