--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -5,7 +5,7 @@
       <p class="form-title">Đăng nhập</p>
       <form id="form-3" method="post" action="/authentication/checking-account">
         <div class="form-group">
-          <input type="text" class="form-control" id="email" name="email" placeholder="Tài khoản">
+          <input type="text" class="form-control" id="email" name="email" placeholder="Email">
           <span class="form-message"></span>
         </div>
 
