--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -23,9 +23,9 @@ body {
   position: fixed;
   width: 100%;
   height: 100vh;
-  backdrop-filter: blur(5px);
+  background-color: #FFDFDF;
   top: 0;
-  left: 0;
+  left: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
