--- a/src/public/css/user/body.css
+++ b/src/public/css/user/body.css
@@ -204,8 +204,8 @@ body {
   position: fixed;
   width: 100%;
   height: 100vh;
-  backdrop-filter: blur(5px);
-  top: 0;
+  background-color: #FFDFDF;
+  top: 70px;
   left: 0;
   display: flex;
   align-items: center;
