--- a/src/resource/views/admin/createCustomer.hbs
+++ b/src/resource/views/admin/createCustomer.hbs
@@ -5,7 +5,12 @@
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="name" name="name" placeholder="Họ và tên">
+      <input type="text" class="form-control" id="name" name="name" placeholder="Họ Tên">
+      <span class="form-message"></span>
+    </div>
+
+    <div class="form-group">
+      <input type="text" class="form-control" id="email" name="email" placeholder="Email">
       <span class="form-message"></span>
     </div>
 
@@ -16,6 +21,16 @@
 
     <div class="form-group">
       <input type="text" class="form-control" id="address" name="address" placeholder="Địa chỉ">
+      <span class="form-message"></span>
+    </div>
+
+    <div class="form-group">
+      <input type="password" class="form-control" id="password" name="password" placeholder="Mật Khẩu">
+      <span class="form-message"></span> 
+    </div>
+
+    <div class="form-group">
+      <input type="password" class="form-control" id="password-confirm" name="password-confirm" placeholder="Xác Nhận Mật Khẩu">
       <span class="form-message"></span>
     </div>
 
@@ -54,12 +69,22 @@ function isRequiredString(selector) {
   }
 }
 
-// isRequiredNumber requires input must have number
-function isRequiredNumber(selector) {
+function isEmail(selector) {
   return {
     selector: selector,
     test: function (value) {
-      return value > 0 ? undefined : 'Chưa Nhập Tiền Kìa =((('
+      var regex = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/
+      return regex.test(value) ? undefined : 'Nhập Đúng Email Vô =((('
+    }
+  }
+}
+
+// isConfirmPassword requires reEnter password must be the same as the initial 
+function isConfirmPassword(selector, getPasswordValue) {
+  return {
+    selector: selector,
+    test: function (value) {
+      return (value === getPasswordValue() && value !== '') ? undefined : "Mật Khẩu Chưa Trùng Rồi"
     }
   }
 }
@@ -67,7 +92,7 @@ function isRequiredNumber(selector) {
 // validator function to validate input form from user
 function validator(options) {
   var formElement = document.querySelector(options.form)
-  var checkValidate = Array(3).fill(false)
+  var checkValidate = Array(6).fill(false)
 
   options.rules.forEach(function (rule, index) {
     var inputElement = formElement.querySelector(rule.selector)
@@ -96,8 +121,13 @@ validator({
   errorSelector: '.form-message',
   rules: [
     isRequiredString('#name'),
-    isRequiredNumber('#phone'),
+    isEmail('#email'),
+    isRequiredString('#phone'),
     isRequiredString('#address'),
+    isRequiredString('#password'),
+    isConfirmPassword('#password-confirm', function() {
+      return document.querySelector('#form-1 #password').value
+    })
   ]
 })
 </script>
