--- a/src/resource/views/admin/createProduct.hbs
+++ b/src/resource/views/admin/createProduct.hbs
@@ -15,63 +15,29 @@
     <div class="form-group" style="display: none;">
       <select name="skincare">
         <option value="">-- Skincare --</option>
-        <option value="xit-khoang">
-          Xịt Khoáng
-        </option>
-        <option value="mat-na">
-          Mặt Nạ
-        </option>
-        <option value="serum">
-          Serum
-        </option>
-        <option value="bha">
-          BHA
-        </option>
-        <option value="tay-da-chet">
-          Tẩy Da Chết
-        </option>
-        <option value="duong-da">
-          Dưỡng Da
-        </option>  
-        <option value="toner">
-          Toner
-        </option>
-        <option value="nuoc-tay-trang">
-          Nước Tẩy Trang
-        </option>
-        <option value="cham-mun">
-          Chấm Mụn
-        </option>
-        <option value="kem-duong-am">
-          Kem Dưỡng Ẩm
-        </option>
-        <option value="sua-rua-mat">
-          Sữa Rửa Mặt
-        </option>
+        <option value="xit-khoang">Xịt Khoáng</option>
+        <option value="mat-na">Mặt Nạ</option>
+        <option value="serum">Serum</option>
+        <option value="bha">BHA</option>
+        <option value="tay-da-chet">Tẩy Da Chết</option>
+        <option value="duong-da">Dưỡng Da</option>  
+        <option value="toner">Toner</option>
+        <option value="nuoc-tay-trang">Nước Tẩy Trang</option>
+        <option value="cham-mun">Chấm Mụn</option>
+        <option value="kem-duong-am">Kem Dưỡng Ẩm</option>
+        <option value="sua-rua-mat">Sữa Rửa Mặt</option>
       </select>
     </div>
 
     <div class="form-group" style="display: none;">
       <select name="makeup">
         <option value="">-- Makeup --</option>
-        <option value="phan-ma">
-          Phấn Má
-        </option>
-        <option value="mascara">
-          Mascara
-        </option>
-        <option value="ke-mat">
-          Kẻ Mắt
-        </option>
-        <option value="kem-chong-nang">
-          Kem Chống Nắng
-        </option>
-        <option value="che-khuyet-diem">
-          Che Khuyết Điểm
-        </option>
-        <option value="son">
-          Son
-        </option>
+        <option value="phan-ma">Phấn Má</option>
+        <option value="mascara">Mascara</option>
+        <option value="ke-mat">Kẻ Mắt</option>
+        <option value="kem-chong-nang">Kem Chống Nắng</option>
+        <option value="che-khuyet-diem">Che Khuyết Điểm</option>
+        <option value="son">Son</option>
       </select>
     </div>
 
