--- a/src/resource/views/admin/createStore.hbs
+++ b/src/resource/views/admin/createStore.hbs
@@ -1,43 +1,27 @@
 <div class="admin-create-store-container">
-  <form id="form-1" method="post" action="/admin/all-products/product/created" enctype="multipart/form-data">
+  <form id="form-1" method="post" action="/admin/all-stores/store/created" enctype="multipart/form-data">
     <div class="form-title">
       <p>Thêm cửa hàng mới</p>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="brand" name="brand" placeholder="Hãng Sản Phẩm">
+      <input type="text" class="form-control" id="name" name="name" placeholder="Tên cửa hàng">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="name" name="name" placeholder="Tên Sản phẩm">
+      <input type="text" class="form-control" id="address" name="address" placeholder="Địa chỉ cửa hàng">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="oldPrice" name="oldPrice" placeholder="Giá Cũ Sản Phẩm">
-      <span class="form-message"></span>
-    </div>
-
-    <div class="form-group">
-      <input type="text" class="form-control" id="price" name="price" placeholder="Giá Mới Sản Phẩm">
-      <span class="form-message"></span>
-    </div>
-
-    <div class="form-group">
-      <input type="text" class="form-control" id="description" name="description" placeholder="Giới Thiệu Sản Phẩm">
-      <span class="form-message"></span>
-    </div>
-
-    <div class="form-group">
-      <input type="text" class="form-control" id="details" name="details" placeholder="Chi tiết Sản Phẩm">
+      <input type="text" class="form-control" id="details" name="details" placeholder="Thông tin cửa hàng">
       <span class="form-message"></span>
     </div>
 
     <div class="submit-button">
       <button title="submit" type="submit">Hoàn thành</button>
     </div>
-
   </form>
 </div>
 
@@ -70,20 +54,10 @@ function isRequiredString(selector) {
   }
 }
 
-// isRequiredNumber requires input must have number
-function isRequiredNumber(selector) {
-  return {
-    selector: selector,
-    test: function (value) {
-      return value > 0 ? undefined : 'Chưa Nhập Tiền Kìa =((('
-    }
-  }
-}
-
 // validator function to validate input form from user
 function validator(options) {
   var formElement = document.querySelector(options.form)
-  var checkValidate = Array(5).fill(false)
+  var checkValidate = Array(3).fill(false)
 
   options.rules.forEach(function (rule, index) {
     var inputElement = formElement.querySelector(rule.selector)
@@ -111,29 +85,9 @@ validator({
   form: '#form-1',
   errorSelector: '.form-message',
   rules: [
-    isRequiredString('#brand'),
     isRequiredString('#name'),
-    isRequiredNumber('#price'),
-    isRequiredString('#description'),
-    isRequiredString('#details'),
+    isRequiredString('#address'),
+    isRequiredString('#details')
   ]
 })
-
-// skincare and makeup visibility
-var selectBox = document.querySelector('select[name="categories"]')
-var selectedValue = ''
-var skincareBox = document.querySelector('select[name="skincare"]').parentElement
-var makeUpBox = document.querySelector('select[name="makeup"]').parentElement
-
-selectBox.onchange = function() {
-  selectedValue = selectBox.options[selectBox.selectedIndex].value;
-  if (selectedValue === 'skincare') {
-    skincareBox.style.display = 'block'
-    makeUpBox.style.display = 'none'
-  }
-  if (selectedValue === 'makeup') {
-    skincareBox.style.display = 'none'
-    makeUpBox.style.display = 'block'
-  }
-}
 </script>
