--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -6,30 +6,28 @@
   <div class="title">
     <i class="fi fi-sr-flame"></i>
     <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
-      <a href="/all-products/flash-sale" class="main-title">
-        <b>FLASH DEAL</b>
-      </a>
+      <a href="/all-products/flash-sale" class="main-title"><b>FLASH DEAL</b></a>
     </h1>
   </div>
   
   <div class="products">
-    {{#each flashDealProduct}}
-    <a href="/product/{{this.slug}}">
-      <div class="product">
-        <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-        <del style="color: black;"><p id="product-old-price">{{this.oldPrice}}</p></del>
-        <p id="product-price">{{this.price}}</p>
-        <p id="product-details">{{this.name}}</p>
-        <p id="product-rate">
-          {{this.rate}}/5
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-        </p>
-      </div>
-    </a>
+    {{#each (checkStatus products 'flash-sale' 5)}}
+      <a href="/all-products/product/{{this.slug}}">
+        <div class="product">
+          <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
+          <del style="color: black;"><p id="product-old-price">{{this.oldPrice}}</p></del>
+          <p id="product-price">{{this.price}}</p>
+          <p id="product-details">{{this.name}}</p>
+          <p id="product-rate">
+            {{this.rate}}/5
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+          </p>
+        </div>
+      </a>  
     {{/each}}
   </div>
 </div>
@@ -38,29 +36,27 @@
   <div class="title">
     <i class="fi fi-sr-flame"></i>
     <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
-      <a href="/all-products/hot" class="main-title">
-        <b>SẢN PHẨM HOT</b>
-      </a>
+      <a href="/all-products/hot" class="main-title"><b>SẢN PHẨM HOT</b></a>
     </h1>
   </div>
   
   <div class="products">
-    {{#each hotProduct}}
-    <a href="/product/{{this.slug}}">
-      <div class="product">
-        <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-        <p id="product-price">{{this.price}}</p>
-        <p id="product-details">{{this.name}}</p>
-        <p id="product-rate">
-          {{this.rate}}/5
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-        </p>
-      </div>
-    </a>
+    {{#each (checkStatus products 'hot' 5)}}
+      <a href="/all-products/product/{{this.slug}}">
+        <div class="product">
+          <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
+          <p id="product-price">{{this.price}}</p>
+          <p id="product-details">{{this.name}}</p>
+          <p id="product-rate">
+            {{this.rate}}/5
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+          </p>
+        </div>
+      </a>
     {{/each}}
   </div>
 </div>
@@ -69,30 +65,27 @@
   <div class="title">
     <i class="fi fi-sr-flame"></i>
     <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
-      <a href="/all-products" class="main-title">
-        <b>TOÀN BỘ SẢN PHẨM</b>
-      </a>
+      <a href="/all-products" class="main-title"><b>TOÀN BỘ SẢN PHẨM</b></a>
     </h1>
-    
   </div>
 
   <div class="products">
-    {{#each allProduct}}
-    <a href="/product/{{this.slug}}">
-      <div class="product">
-        <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-        <p id="product-price">{{this.price}}</p>
-        <p id="product-details">{{this.name}}</p>
-        <p id="product-rate">
-          {{this.rate}}/5
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-          <i class="fi fi-ss-star"></i>
-        </p>
-      </div>
-    </a>
+    {{#each (limit products 5)}}
+      <a href="/all-products/product/{{this.slug}}">
+        <div class="product">
+          <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
+          <p id="product-price">{{this.price}}</p>
+          <p id="product-details">{{this.name}}</p>
+          <p id="product-rate">
+            {{this.rate}}/5
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+            <i class="fi fi-ss-star"></i>
+          </p>
+        </div>
+      </a>
     {{/each}}
   </div>
 </div>
@@ -111,7 +104,7 @@
     <div class="inner">
       {{#each brands}}
       <div class="brand">
-        <a href="/all-products/all-brands/{{this.name}}">
+        <a href="/all-brands/brand/{{this._id}}">
           {{this.name}}
         </a>
       </div>
