--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -10,7 +10,7 @@
         </div>
 
         <div class="form-group">
-          <input type="text" class="form-control" id="email" name="email" placeholder="Tài khoản">
+          <input type="text" class="form-control" id="email" name="email" placeholder="Email">
           <span class="form-message"></span>
         </div>
 
