--- a/src/public/css/user/detailProduct.css
+++ b/src/public/css/user/detailProduct.css
@@ -241,12 +241,8 @@
     }
     .details-box {
       width: 90% !important;
-      h1 {
-        font-size: 25px !important;
-      }
-      h3 {
-        font-size: 20px !important;
-      }
+      h1 {font-size: 25px !important}
+      h3 {font-size: 20px !important}
       .quantity {
         width: 100% !important;
         justify-content: center !important;
@@ -255,9 +251,5 @@
         width: 50% !important
       }
     }
-  };
+  }
 }
-
-  
-
-  
