--- a/src/resource/views/admin/allOrders.hbs
+++ b/src/resource/views/admin/allOrders.hbs
@@ -38,7 +38,7 @@
           <td>{{this._id}}               </td>
           <td>{{this.customerInfo.name}} </td>
           <td id="total-order-price">{{this.totalOrderPrice}}       </td>
-          <td>{{this.createdAt}}         </td>
+          <td>{{formatDate this.createdAt}}         </td>
           <td>{{this.status}}            </td>
           <td><a href="/admin/all-orders/order/{{this._id}}"><button>Chi Tiết</button></a></td>
         </tr>
