--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -94,7 +94,7 @@
   <div class="title">
     <i class="fi fi-sr-flame"></i>
     <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
-      <a href="/all-products/all-brands" class="main-title">
+      <a href="/all-brands" class="main-title">
         <b>THƯƠNG HIỆU NỔI BẬT</b>
       </a>
     </h1>
