--- a/src/public/css/admin/createPurchase.css
+++ b/src/public/css/admin/createPurchase.css
@@ -5,44 +5,89 @@
   align-items: center;
   justify-content: center;
   form {
+    width: 100%;
     border: 1px solid black;
     padding: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     height: fit-content;
-  }
-  .form-title {
-    width: 504px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    p {
-      font-size: larger;
-      font-weight: bolder;
-      text-transform: uppercase
-    };
   }
-  .form-group {
-    display: grid;
-    gap: 5px;
-    padding: 5px 10px 5px 10px;
-    input {
-      width: 100%;
-      min-height: 30px;
-      border-radius: 5px;
-      text-indent: 10px;
-      border: none
-    };
-    #avatar {
-      width: fit-content;
-      padding-left: 5px;
+  .form-title {
+    font-size: larger;
+    font-weight: bolder;
+    text-transform: uppercase
+  }
+  input {
+    width: 50%;
+    min-height: 30px;
+    border-radius: 5px;
+    text-indent: 10px;
+    border: 1px solid #D1A6A6;
+    font-family: 'Roboto', sans-serif;
+  }
+  input:focus { 
+    outline: 1.5px solid #D1A6A6;
+  }
+  .products-match {
+    width: 80%;
+    height: 200px;
+    .product {
+      background-color: white;
+      border-radius: 10px;
+      margin-top: 5px;
+      padding: 5px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      cursor: pointer;
+      img { width: 40px; height: 40px;}
+    }
+    tr:hover {
+      filter: brightness(80%);
     }
   }
-  select, option {
-    width: fit-content;
-    height: 30px;
-    border-radius: 5px;
-    border-style: none;
-    padding-left: 5px;
+  table {
+    width: 100%;
+    border-spacing: 0px 10px;
+    padding: 0px 5px;
+    background-color: #F0F0F0;
+    border-radius: 10px;
+    text-align: center;
+  }
+  thead, tfoot {
+    background-color:#D1A6A6;
+    height: 50px;
+    i { color: black }
+    td:first-child {
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+    }
+    td:last-child {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+  }
+  tbody {
+    tr {
+      background-color: white;
+      height: 50px;
+      td:first-child {
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+      }
+      td:last-child {
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+      }
+      a { text-decoration: none; color: black; font-weight: bold; }
+    }
+    tr:hover {
+      filter: brightness(80%);
+    }
   }
   .submit-button {
     width: 504px;
@@ -67,7 +112,7 @@
   }
 }
 @media screen and (max-width: 700px) {
-  .admin-create-product-container {
+  .admin-create-purchase-container {
     form {
       width: 100% !important;
     }
