--- a/src/resource/views/admin/createPurchase.hbs
+++ b/src/resource/views/admin/createPurchase.hbs
@@ -1,39 +1,72 @@
 <div class="admin-create-purchase-container">
   <form id="form-1" method="post" action="/admin/all-purchases/purchase/created" enctype="multipart/form-data">
-    <div class="form-title">
-      <p>Thêm đơn nhập mới</p>
+    <p class="form-title">Thêm đơn nhập mới</p>
+    <input type="text" placeholder="Nhập tên sản phẩm">
+    <div class="products-match">
+      {{#each products}}
+        <div class="product" style="display: none;">
+          <p style="width: 15%">{{this.brand}}</p>
+          <p 
+            style="width: 65%; display:flex; align-items:center; justify-content:start; gap:5px"
+            class="product-name"
+          >
+            <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy" loading="lazy"> 
+            {{this.name}}
+          </p>  
+          <p style="width: 10%;">{{this.categories}}</p>
+          <p style="width: 10%;" id="product-price">{{this.price}}</p>
+        </div>
+      {{/each}}
     </div>
 
-    <div class="form-group">
-      <input type="text" placeholder="Nhập tên sản phẩm">
-    </div>
+    <table>
+      <thead>
+        <tr>
+          <td style="width:  5%;">STT</td>
+          <td style="width: 50%;">Sản Phẩm</td>
+          <td style="width: 15%;">Đơn Giá</td>
+          <td style="width: 10%;">Số Lượng</td>
+          <td style="width: 15%;">Tổng Tiền</td>
+          <td style="width: 5%;"></td>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+      <tfoot>
+        <td colspan="4">Tổng</td>
+        <td>100000</td>
+        <td></td>
+      </tfoot>
+    </table>  
 
-    <div class="products-match"></div>
-
-    <div style="overflow-x: auto;">
-      <table>
-        <thead>
-          <tr>
-            <td style="width: 15%;"></td>
-            <td style="width: 50%;">Sản Phẩm</td>
-            <td style="width: 10%;">Đơn Giá</td>
-            <td style="width: 10%;">Số Lượng</td>
-            <td style="width: 10%;">Tổng Tiền</td>
-            <td style="width: 5%;"></td>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-        <tfoot>
-        </tfoot>
-      </table>
-    </div>
-
-    <div class="submit-button">
-      <button title="submit" type="submit">Hoàn thành</button>
-    </div>
+    <div class="submit-button"><button title="submit" type="submit">Hoàn thành</button></div>
   </form>
 </div>
 
 <script>  
+  const input = document.querySelector('input')
+  const product = Array.from(document.querySelectorAll('div.product')) 
+  const productName = Array.from(document.querySelectorAll('p.product-name')).map((item) => {
+    return item.innerText
+      .normalize('NFD')
+      .replace(/[\u0300-\u036f]/g, '') // Remove diacritical marks
+      .replace(/đ/g, 'd')             // Replace 'đ' with 'd'
+      .replace(/Đ/g, 'D')             // Replace 'Đ' with 'D'
+      .toLowerCase();                 // Convert to lowercase
+  })
+  input.addEventListener('input', function() {
+    const value = input.value
+    console.log(value)
+    productName.forEach((item, index) => {
+      if (value === '') {
+        product[index].style.display = 'none'
+        return
+      } 
+      if (item.includes(value)) {
+        product[index].style.display = ''
+        return
+      }
+      product[index].style.display = 'none'
+    })
+  })
 </script>
