--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -10,15 +10,16 @@
   <link rel="stylesheet" href="/css/user/allBrands.css"media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/allProducts.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/allOrders.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/body.css">
+  <link rel="stylesheet" href="/css/user/detailBrand.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/detailOrder.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/detailProduct.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/footer.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/header.css">
   <link rel="stylesheet" href="/css/user/home.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/introduce.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/order.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/ordersChecking.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/product.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/profile.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/body.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
