--- a/src/resource/views/users/detailProduct.hbs
+++ b/src/resource/views/users/detailProduct.hbs
@@ -34,18 +34,9 @@
       </div>
 
       <div class="button">
-        <div class="add-to-cart">
-          <p>Thêm Vào Giỏ</p>
-        </div>
-        
-        <div class="buy-now">
-          <a href="/all-orders">
-            <p>Mua Ngay</p> 
-          </a>
-        </div>
-        <div class="out-of-order">
-          <p>Hết Hàng</p>
-        </div>
+        <div class="add-to-cart"><p>Thêm Vào Giỏ</p></div>
+        <div class="buy-now"><a href="/all-orders"><p>Mua Ngay</p></a></div>
+        <div class="out-of-order"><p>Hết Hàng</p></div>
       </div>
     </div>
   </div>
@@ -67,11 +58,11 @@
 
     <div class="products">
       {{#each relatedProducts}}
-      <a href="/product/{{this.slug}}">
+      <a href="/all-products/product/{{this.slug}}">
         <div class="product">
           <img src="{{this.img.path}}" alt="{{this.name}}" id="product-1" loading="lazy">
-          <p id="product-old-price"><del>{{this.oldPrice}}</del></p>
-          <p id="product-price">{{this.price}}</p>
+          <del><h4 id="product-old-price">{{this.oldPrice}}</h4></del>
+          <h3 id="product-price">{{this.price}}</h3>
           <p id="product-details">{{this.name}}</p>
         </div>
       </a>
@@ -89,17 +80,21 @@
   var getIncreaseQuantity = document.querySelector('i.fi-rr-add')
   var getDecreaseQuantity = document.querySelector('i.fi-rr-minus-circle')
   var getQuantityValue    = document.querySelector('div.quantity').querySelector('p')
-  var productOldPrices    = document.querySelector('h4#product-old-price')
-  var productPrices       = document.querySelector('h3#product-price')
+  var productOldPrices    = document.querySelectorAll('h4#product-old-price')
+  var productPrices       = document.querySelectorAll('h3#product-price')
   
-  productOldPrices.innerText = productOldPrices.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'
-  productPrices.innerText = productPrices.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'
+  productOldPrices.forEach((item) => {
+    item.innerText = item.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'  
+  })
+  productPrices.forEach((item) => {
+    item.innerText = item.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'
+  })
   const metaContent = `{{newProduct.details}}`.slice(0, 150) + '...'
 
   document.addEventListener("DOMContentLoaded", function() {
     const metaDescription = document.querySelector("meta[name='description']");
     metaDescription.setAttribute("content", metaContent);
-  });
+  })
   
   // set default quantity value to 0 on first load and hidden the quantity div
   getQuantityValue.innerText = 0
