--- a/src/public/css/user/body.css
+++ b/src/public/css/user/body.css
@@ -17,189 +17,6 @@ body {
 ::-webkit-scrollbar-track {background: #FFDFDF}
 ::-webkit-scrollbar-thumb {background: #D1A6A6;border-radius: 5px}
 ::-webkit-scrollbar-thumb:hover {background: #D1A6A6}
-.dropup {
-  display: inline-block;
-  margin-left: auto;
-  margin-right: 0;
-  bottom: 70px;
-  right: 5px;
-  position: fixed;
-  span {
-    display: block;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    animation: ring 1.5s infinite;
-    i { font-size: 50px; color: #e17640 };
-  }
-  .dropup-content {
-    display: none;
-    position: absolute;
-    width: 50px;
-    z-index: 1;
-    bottom: 60px;
-    .content {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      padding-bottom: 10px;
-      img { width: 30px }
-    };
-  }
-}
-.dropup:hover .dropup-content {
-  display: block;
-}
-.chat-icon {
-  display: inline-block;
-  margin-left: auto;
-  margin-right: 0;
-  bottom: 10px;
-  right: 5px;
-  position: fixed;
-  cursor: pointer;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  animation: ring 1.5s infinite;
-  i { font-size: 50px; color: #e17640 };
-}
-.chat-box {
-  background-color: white;
-  width: 300px;
-  height: 400px;
-  margin-left: auto;
-  margin-right: 0;
-  bottom: 5px;
-  right: 60px;
-  border-radius: 10px;
-  position: fixed;
-  .chat-header {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    top: 0;
-    height: 50px;
-    background-color: #FFFFFF;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 10px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 5px 0 rgba(0, 0, 0, 0.19);
-    i { color: #D1A6A6;}
-    .icon {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 5px;
-      img {
-        border-radius: 50%;
-        width: 35px;
-        aspect-ratio: 1/1;
-      }
-    }
-    .minimize {
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 5px;
-    }
-    .minimize:hover {background-color: #ffffff19}
-  }
-  .chat-body, .not-logged-in {
-    height: 350px;
-  }
-  .not-logged-in {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .chat-content {
-    height: 300px;
-    overflow-y: scroll;
-    box-sizing: border-box;
-    width: 100%;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-    padding-inline-start: 0px;
-    padding: 10px;
-    li {
-      background-color: #FFDFDF;
-      border-radius: 10px;
-      padding: 10px;
-      list-style: none;
-      margin-top: 5px;
-      max-width: 200px;
-      width: fit-content;
-      word-wrap: break-word;
-      display: block;
-      clear: both;
-    }
-    .right-content {
-      float: right;
-    }
-    .left-content {
-      display: flex;
-      align-items: start;
-      justify-content: start;
-      gap: 5px;
-      img {
-        margin-top: 5px;
-        border-radius: 50%;
-        width: 30px;
-        aspect-ratio: 1/1;
-      }
-      li {
-        background-color: #f0f0f0;
-      }
-    }
-  }
-  .chat-content::-webkit-scrollbar-track {
-    background: white;
-  }
-  .input-form {
-    height: 50px;
-    display: flex;
-    align-items: center;
-    padding: 0 5px;
-    gap: 5px;
-    textarea {
-      width: 80%;
-      height: 40px;
-      padding: 0 5px;
-      border-radius: 10px;
-      border: 1px solid #D1A6A6;
-      word-wrap: break-word;
-      resize: none;
-      box-sizing: border-box;
-      padding: 10px 5px 0 5px;
-      font-family: 'Roboto', sans-serif;
-    }
-    textarea:focus {
-      outline: 1px solid #D1A6A6;
-    }
-    .send-btn {
-      width: 20%;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #D1A6A6;
-      border-radius: 10px;
-      color: white;
-      cursor: pointer;
-    }
-    .send-btn.not-allowed {
-      cursor: not-allowed;
-      opacity: 0.5;
-    }
-  }
-}
 .preloader {
   position: fixed;
   width: 100%;
@@ -226,17 +43,14 @@ body {
   border-radius: 50%;
   animation: 1s reloader infinite linear;
 }
-@keyframes reloader {
-  to { transform: rotate(360deg); }
+.tippy-tooltip.bunny-theme {
+  background-color: #FFDFDF;
+  color: black;
 }
-@keyframes ring {
-  0% {
-    rotate: 10deg;
-  }
-  50% {
-    rotate: -10deg;
-  }
-  100% {
-    rotate: 10deg;
-  }
+.tippy-tooltip.tomato-theme[data-placement^='top'] .tippy-arrow {border-top-color: #FFDFDF;}
+.tippy-tooltip.tomato-theme[data-placement^='bottom'] .tippy-arrow {border-bottom-color: #FFDFDF;}
+.tippy-tooltip.tomato-theme[data-placement^='left'] .tippy-arrow {border-left-color: #FFDFDF;}
+.tippy-tooltip.tomato-theme[data-placement^='right'] .tippy-arrow {border-right-color: #FFDFDF;}
+@keyframes reloader {
+  to { transform: rotate(360deg)}
 }
