--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/css/user/detailBrand.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/detailOrder.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/detailProduct.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/fixedComponents.css">
   <link rel="stylesheet" href="/css/user/footer.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/header.css">
   <link rel="stylesheet" href="/css/user/home.css" media="print" onload="this.media='all'">
@@ -50,7 +51,13 @@
 </body>
 </html>
 
+<script src="https://unpkg.com/popper.js@1"></script>
+<script src="https://unpkg.com/tippy.js@5"></script>
 <script>
+  tippy('[data-tippy-content]', {
+    arrow: false,
+    theme: 'bunny'
+  })
   window.addEventListener('load', () => {
     const preloader = document.querySelector('div.preloader')
     preloader.classList.add('inactive')
