--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -3,7 +3,7 @@
 </div>
 
 <div class="flash-deal-board">
-  <div class="title">
+  <div class="title" data-tippy-content="Xem toàn bộ sản phẩm đang sale">
     <i class="fi fi-sr-flame"></i>
     <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
       <a href="/all-products/flash-sale" class="main-title"><b>FLASH DEAL</b></a>
@@ -13,7 +13,7 @@
   <div class="products">
     {{#each (checkStatus products 'flash-sale' 5)}}
       <a href="/all-products/product/{{this.slug}}">
-        <div class="product">
+        <div class="product" data-tippy-content="{{this.name}}">
           <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
           <del style="color: black;"><p id="product-old-price">{{this.oldPrice}}</p></del>
           <p id="product-price">{{this.price}}</p>
@@ -33,7 +33,7 @@
 </div>
 
 <div class="hot-products-board">
-  <div class="title">
+  <div class="title" data-tippy-content="Xem toàn bộ sản phẩm đang hot">
     <i class="fi fi-sr-flame"></i>
     <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
       <a href="/all-products/hot" class="main-title"><b>SẢN PHẨM HOT</b></a>
@@ -43,7 +43,7 @@
   <div class="products">
     {{#each (checkStatus products 'hot' 5)}}
       <a href="/all-products/product/{{this.slug}}">
-        <div class="product">
+        <div class="product" data-tippy-content="{{this.name}}">
           <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
           <p id="product-price">{{this.price}}</p>
           <p id="product-details">{{this.name}}</p>
@@ -62,7 +62,7 @@
 </div>
 
 <div class="content-board">
-  <div class="title">
+  <div class="title" data-tippy-content="Xem toàn bộ sản phẩm">
     <i class="fi fi-sr-flame"></i>
     <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
       <a href="/all-products" class="main-title"><b>TOÀN BỘ SẢN PHẨM</b></a>
@@ -72,7 +72,7 @@
   <div class="products">
     {{#each (limit products 5)}}
       <a href="/all-products/product/{{this.slug}}">
-        <div class="product">
+        <div class="product" data-tippy-content="{{this.name}}">
           <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
           <p id="product-price">{{this.price}}</p>
           <p id="product-details">{{this.name}}</p>
@@ -91,7 +91,7 @@
 </div>
 
 <div class="famous-brand-board">
-  <div class="title">
+  <div class="title" data-tippy-content="Xem toàn bộ thương hiệu">
     <i class="fi fi-sr-flame"></i>
     <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
       <a href="/all-brands" class="main-title">
@@ -103,7 +103,7 @@
   <div class="brands">
     <div class="inner">
       {{#each brands}}
-      <div class="brand">
+      <div class="brand" data-tippy-content="{{this.name}}">
         <a href="/all-brands/brand/{{this._id}}">
           {{this.name}}
         </a>
