--- a/src/resource/views/users/detailBrand.hbs
+++ b/src/resource/views/users/detailBrand.hbs
@@ -1,4 +1,4 @@
-<div class="brand-details-container">
+<div class="detail-brand-container">
   <div class="table">
     <div class="image-box">
       <div class="image">
