--- a/src/resource/views/users/detailOrder.hbs
+++ b/src/resource/views/users/detailOrder.hbs
@@ -1,4 +1,4 @@
-<div class="order-container">
+<div class="detail-order-container">
    <table>
     <thead>
       <tr><td colspan="2"> Thông tin chung </td></tr>
