--- a/src/public/css/user/detailRateOrder.css
+++ b/src/public/css/user/detailRateOrder.css
@@ -1,23 +1,12 @@
-.detail-order-container {
+.detail-rate-order-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  gap: 10px;
-  .title {
-    width: 90%;
-    background-color: white;
-    padding: 10px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: larger;
-    font-weight: bolder;
-    height: 50px;
+  form {
+    width: 70%;
   }
   table {
-    width: 70%;
+    width: 100%;
     border-spacing: 0px 10px;
     padding: 0px 10px;
     thead {
